[gd_scene load_steps=15 format=2]

[ext_resource path="res://Juego/Naves/Estaciones/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/Estaciones/baseEnemiga1_0.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/Estaciones/baseEnemiga1_1.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/Estaciones/baseEnemiga1_2.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/Estaciones/baseEnemiga1_3.png" type="Texture" id=5]
[ext_resource path="res://Juego/Naves/Estaciones/BaseEnemiga.gd" type="Script" id=6]
[ext_resource path="res://Juego/Naves/Estaciones/impactEstacion.ogg" type="AudioStream" id=7]
[ext_resource path="res://Juego/Naves/Enemigo/AreaColision.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=4]
radius = 43.6844
height = 428.009

[sub_resource type="CapsuleShape2D" id=5]
radius = 20.4953
height = 191.081

[sub_resource type="CapsuleShape2D" id=6]
radius = 23.7735
height = 55.5906

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotacion_anti_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/Sprites:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="BaseEnemiga" type="Node2D"]
script = ExtResource( 6 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 27
script = ExtResource( 8 )

[node name="Sprites" type="Node2D" parent="AreaColision"]
z_index = 1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="AreaColision/Sprites"]
position = Vector2( -4, 97 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="AreaColision/Sprites"]
position = Vector2( 0, -123 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="AreaColision/Sprites"]
position = Vector2( 194, 0 )
rotation = 3.14159
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="AreaColision/Sprites"]
position = Vector2( 0, -172 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, 49.375 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 154.97, 0 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( -99.226, 0 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/rotacion_anti_horario = SubResource( 2 )
anims/rotacion_horario = SubResource( 3 )

[node name="ImpactoSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]

[editable path="AreaAtraccion"]
